syntax = "proto3";

option go_package = "./;proto";
package dispatcher;

import "gateway.proto";
// 1. 请求分发
// 2. 调用扩容请求
// 3. 更新调度器视图
service coordinator {
  rpc AddNodeInfo(NodeInfoUpdate) returns (CoordinatorReply){}            //历史遗迹，由register包含其全部功能
  rpc AddSchedulerInfo(SchedulerInfoUpdate) returns (CoordinatorReply){}  //历史遗迹，由register包含其全部功能
  rpc AddDispatcherInfo(DispatcherInfoUpdate) returns (CoordinatorReply){}//历史遗迹，由register包含其全部功能
  rpc Register(gateway_rpc.RegisterReq)returns(gateway_rpc.RegisterResp){}
}

message NodeInfoUpdate{
  string NodeName = 1;
  string Address = 2;
  int64 HaveCpu = 3;
  int64 HaveMem = 4;
}

message SchedulerInfoUpdate{
  string SchedulerName = 1;
  string Address = 2;
}

message DispatcherInfoUpdate{
  string SchedulerName = 1;
  string Address = 2;
}

message CoordinatorReply{
  int64 state = 1;
  string message = 2;
}


